packages/vaadin-lumo-styles/src/components/breadcrumbs-item.css
/**
 * @license
 * Copyright (c) 2026 - 2026 Vaadin Ltd.
 * This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
 */
@media lumo_components_breadcrumbs-item {
  :host {
    --_focus-ring-color: var(--vaadin-focus-ring-color, var(--lumo-primary-color-50pct));
    --_focus-ring-width: var(--vaadin-focus-ring-width, 2px);
    font-family: var(--lumo-font-family);
    font-size: var(--lumo-font-size-m);
    line-height: var(--lumo-line-height-xs);
  }

  :host::after {
    color: var(--lumo-contrast-50pct);
  }

  [part='link'] {
    color: var(--lumo-primary-text-color);
    text-decoration: none;
    cursor: var(--lumo-clickable-cursor);
    transition: color 140ms;
  }

  [part='nolink'] {
    color: inherit;
  }

  :host([current]) [part='nolink'] {
    color: var(--lumo-body-text-color);
    font-weight: 500;
  }

  @media (any-hover: hover) {
    [part='link']:hover {
      color: var(--lumo-primary-color);
      text-decoration: underline;
    }

    :host([slot='overlay']) [part='link']:hover {
      background-color: var(--lumo-contrast-5pct);
      color: var(--lumo-primary-text-color);
    }
  }

  [part='link']:active {
    color: var(--lumo-primary-color);
    text-decoration: underline;
  }

  [part='link']:focus-visible {
    border-radius: var(--lumo-border-radius-m);
    outline: var(--_focus-ring-width) solid var(--_focus-ring-color);
  }

  :host([disabled]) [part='link'] {
    color: var(--lumo-disabled-text-color);
  }

  slot[name='prefix']::slotted(:is(vaadin-icon, [class*='icon'])) {
    width: var(--lumo-icon-size-s);
    height: var(--lumo-icon-size-s);
    color: inherit;
  }

  :host([slot='overlay']) [part='link'],
  :host([slot='overlay']) [part='nolink'] {
    color: var(--lumo-body-text-color);
  }

  :host([slot='overlay']) [part='link']:focus-visible {
    border-radius: var(--lumo-border-radius-m);
  }
}

